In Add/EditRule page, unable to see all the fields in dropdown even user scrolls in dropdown fixed

--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -426,10 +426,11 @@
                           {{outcomeObj.fieldName? outcomeObj.fieldName : "Choose field"}}
                         </button>
                                                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu style="overflow-y: hidden;">
-                                                    <perfect-scrollbar class="empty-scroll">
+                                                    
                                                     <li class="search-box">
                                                         <input type="text" (keydown)="$event.stopPropagation()" (keyup)="getFieldAutoComplete($event,outcomeObj)" placeholder="Search" class="seach-input" />
                                                     </li>
+                                                    <perfect-scrollbar class="empty-scroll" style="max-height: 189px !important;">
                                                     <ng-container *ngIf="fieldAutoSuggestion && fieldAutoSuggestion.length">
                                                         <li ngbDropdownItem *ngFor="let suggestion of fieldAutoSuggestion" (click)="selectField(suggestion, outcomeObj)" [ngClass]="{'active':outcomeObj.fieldName===suggestion.fieldName}">{{ suggestion.fieldName }}</li>
                                                     </ng-container>
