--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -760,7 +760,7 @@
     </div>
     <div class="row m-0 input-boxes">
       <div class="kr-sg-dropdowns col-6 pl-0 pr-2">
-        <div class="label-text">Soure</div>
+        <div class="label-text">Source</div>
         <div class="dropdown dropdown-open">
           <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">
             {{
