--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -118,7 +118,7 @@
       <div class="heading">{{'synonyms.no_synonyms_available_here' | translate}}</div>
       <div class="desc">{{'synonyms.please_add_synonyms'| translate}}</div> -->
 
-        <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets/images/synonyms.empty-svg.svg"></div>
+        <div class="img-block"*ngIf="!emptyItems"><img class="action_icon" (load)="imageLoad()"src="assets\images\synonymEmpty.svg"></div>
         <ng-container *ngIf="loadImageText">
             <div class="empty-title">You have not added any synonyms yet!</div>
             <div class="desc-text"> Synonyms are a set of equivalent words that are considered to expand search queries to improve findability. SearchAssist allows you to define synonym & one-way synonym.
