--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2412,4 +2412,5 @@ display: none !important;
 
 .sdk-top-down-interface .topdown-search-main-container .structured-data-outer-wrap{
   margin-bottom:30px !important;
+  margin-top:5px !important;
 }
