In Fullpage result screen, the space between File and first record should be reduced- issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1339,7 +1339,7 @@ input:focus{
 }
 .sdk-top-down-interface .structured-search-data-container{
   clear: both;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 .sdk-top-down-interface .structured-search-data-container .customizeEnabled:hover .custom-live-search-matched-results-actions {
   display: block;
