--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -269,7 +269,7 @@ img.logo-img{
   padding: 3px 0px;
 }
 .show-all-results-outer-wrap .data-body-sec{
-  padding: 10px 20px;
+  padding: 16px 20px 10px 20px;
   overflow: auto;
   height: calc(100vh - 200px);
   z-index: 1;
