--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -219,6 +219,19 @@
                                 top: 10px;
                             }
                         }
+                        .seach-block {
+                            color: #202124;
+                            font-style: normal;
+                            font-weight: 500;
+                            font-size: 12px;
+                            // margin-right: 30px;
+                            img {
+                                margin-right: 7px;
+                                cursor: pointer;
+                                position: relative;
+                                top: -1px;
+                            }
+                        } 
                         .kr-sg-dropdowns{
                             width: auto;
                             margin-left: 10px;
