Text in Facets, Rules,Traits screen is trimmed--issue fixed

--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -263,6 +263,7 @@
                 }
                 .title {
                     padding-left: 33px;
+                    line-height: 17px;
                 }
             }
             &.actions {
