--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div *ngIf='getQueriesWithResults?.length && QWR_totalRecord>10' style="margin : 15px"><app-record-pagination [totalRecord]='QWR_totalRecord' [limitpage]='QWR_limitPage' (pageChanged)="paginate($event,'QWR')"></app-record-pagination></div>
+                            <div *ngIf='QWR_totalRecord && QWR_totalRecord>10' style="margin : 15px"><app-record-pagination [totalRecord]='QWR_totalRecord' [limitpage]='QWR_limitPage' (pageChanged)="paginate($event,'QWR')"></app-record-pagination></div>
                         </div>
                         <div id="querieswithoutresults" class="tab-pane fade tab-data-content" [ngClass]="{'active show': !querieswithresults }">
                             <div class="table_data_content">
@@ -101,7 +101,7 @@
 
                             </div>
                             <!-- <span *ngIf='topQuriesWithNoResults.length===0'>No results found</span> -->
-                            <div *ngIf='topQuriesWithNoResults?.length && QWNR_totalRecord>10' style="margin : 15px"><app-record-pagination [totalRecord]='QWNR_totalRecord' [limitpage]='QWNR_limitPage' (pageChanged)="paginate($event,'QWNR')"></app-record-pagination></div>
+                            <div *ngIf='QWNR_totalRecord && QWNR_totalRecord>10' style="margin : 15px"><app-record-pagination [totalRecord]='QWNR_totalRecord' [limitpage]='QWNR_limitPage' (pageChanged)="paginate($event,'QWNR')"></app-record-pagination></div>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="col-1 title">{{result.negativeFeedback}}</div> -->
                 </div>
             </div>
-            <div *ngIf='getSearchQueriesResults?.length && (SQR_limitPage < SQR_totalRecord)' style="margin : 15px"><app-record-pagination [totalRecord]='SQR_totalRecord' [limitpage]='SQR_limitPage' (pageChanged)="paginate($event,'SQR')"></app-record-pagination></div>
+            <div *ngIf='SQR_totalRecord && (SQR_limitPage < SQR_totalRecord)' style="margin : 15px"><app-record-pagination [totalRecord]='SQR_totalRecord' [limitpage]='SQR_limitPage' (pageChanged)="paginate($event,'SQR')"></app-record-pagination></div>
         </div>
     </perfect-scrollbar>
     <!-- <div class="modal-footer">
