--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -1,5 +1,6 @@
 <div class="manage-credentials-container">
 <ng-container  *ngIf="!(channnelConguired && channnelConguired.length) && loadingContent1"> 
+    <app-useronboarding-journey [componentType]='componentType'></app-useronboarding-journey>
     <div class="header-sec col-12 row m-0">
         <div class="col-4 p-0 title-header">Credentials</div>
         </div>
